<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_browser"
        android:title="@string/open_in_browser"
        android:textColor="@android:color/black"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_force_back"
        android:icon="@drawable/ic_close"
        android:title="@string/force_back"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_archive_back"
        android:title="@string/archive_back"
        android:icon="@drawable/ic_archive"
        app:showAsAction="never"/>

    <item
        android:id="@+id/webview_share"
        android:title="@string/webview_share"
        android:icon="@drawable/ic_archive"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_extract_content"
        android:title="@string/extract_web_content"
        android:icon="@drawable/ic_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_toggle_navigation"
        android:title="@string/toggle_navigation"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_toggle_external_block"
        android:title="@string/toggle_external_block"
        android:icon="@drawable/ic_external_block"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add_tag"
        android:title="@string/add_tag"
        app:showAsAction="never"/>
</menu>