<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            android:textAppearance="@style/NavigationDrawerText"/>
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" 
            android:textAppearance="@style/NavigationDrawerText"/>
        <item
            android:id="@+id/nav_rss"
            android:icon="@drawable/rss"
            android:title="@string/menu_rss" 
            android:textAppearance="@style/NavigationDrawerText"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_slideshow"
            android:textAppearance="@style/NavigationDrawerText"/>
    </group>
</menu>